--- a/AsistenciaApp/src/asistenciaapp/FormEstudiante.form
+++ b/AsistenciaApp/src/asistenciaapp/FormEstudiante.form
@@ -140,11 +140,7 @@
         <Component class="javax.swing.JTable" name="tablaestu">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="0">
-                <Column editable="true" title="Nombre" type="java.lang.Object"/>
-                <Column editable="true" title="Carnet" type="java.lang.Object"/>
-                <Column editable="true" title="Especialidad" type="java.lang.Object"/>
-              </Table>
+              <Table columnCount="0" rowCount="0"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
@@ -189,6 +185,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Actualizar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnactualizarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
