--- a/AsistenciaApp/src/asistenciaapp/FormAsistencia.form
+++ b/AsistenciaApp/src/asistenciaapp/FormAsistencia.form
@@ -127,9 +127,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semibold" size="24" style="0"/>
         </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="0" type="rgb"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="TABLA DE ASISTENCIAS - SEMANA DE SISTEMAS"/>
       </Properties>
     </Component>
@@ -233,6 +230,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtBusquedaEstudiante">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtBusquedaEstudianteActionPerformed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtBusquedaEstudianteKeyReleased"/>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtBusquedaEstudianteKeyTyped"/>
           </Events>
